# libzip-meson

./: .gitignore
libzip-1.11.3/: config.h.in  dist.py  meson.build  meson_options.txt
libzip-1.11.3/cmake/: GenerateZipErrorStrings.cmake
libzip-1.11.3/lib/: meson.build
